--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,13 @@
 repos:
--   repo: https://github.com/PyCQA/bandit
-    rev: 'main'
+  - repo: https://github.com/PyCQA/bandit
+    rev: "main"
     hooks:
-    - id: bandit
+      - id: bandit
+  - repo: https://github.com/PyCQA/pylint
+    rev: "main" # Use the sha / tag you want to point at
+    hooks:
+      - id: pylint
+  - repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: "main" # Use the sha / tag you want to point at
+    hooks:
+      - id: autopep8
