--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -21,14 +21,14 @@ jobs:
       run: mkdir -p post_traces
 
     - name: Run pylint
-      run: py -m pylint src/* > post_traces/pylint_traces.txt
+      run: pylint src/* > post_traces/pylint_traces.txt
 
     - name: Run Bandit
       run: bandit -r src/* > post_traces/bandit_traces.txt
 
     - name: Run autopep9
       run: autopep8 --recursive --in-place --aggressive --aggressive src/* > pep8_traces.txt
-      
+
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
