--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+astroid==3.2.4
 autopep8==2.3.1
 bandit==1.7.9
 cfgv==3.4.0
 coverage==7.6.1
+dill==0.3.8
 distlib==0.3.8
 filelock==3.16.0
 identify==2.6.0
 iniconfig==2.0.0
+isort==5.13.2
 markdown-it-py==3.0.0
+mccabe==0.7.0
 mdurl==0.1.2
 nodeenv==1.9.1
 packaging==24.1
@@ -17,9 +21,11 @@ pre-commit==3.8.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
 Pygments==2.18.0
+pylint==3.2.7
 pytest==8.3.3
 pytest-cov==5.0.0
 PyYAML==6.0.2
 rich==13.8.1
 stevedore==5.3.0
+tomlkit==0.13.2
 virtualenv==20.26.4
