--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -23,11 +23,8 @@ jobs:
     - name: Run pylint
       run: pylint src/* > post_traces/pylint_traces.txt
 
-    - name: Run Bandit
-      run: bandit -r src/* > post_traces/bandit_traces.txt
-
     - name: Run autopep9
-      run: autopep8 --recursive --in-place --aggressive --aggressive src/* > pep8_traces.txt
+      run: autopep8 --recursive --in-place --aggressive --aggressive src/* > post_traces/pep8_traces.txt
 
     - name: Test with pytest
       run: |
