--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
-        pytest src/test/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=./main --cov-report=xml --cov-report=html
+        pytest test/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=./main --cov-report=xml --cov-report=html
     - name: Upload coverage report
       uses: actions/upload-artifact@v3
       with:
