--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,10 +29,17 @@ jobs:
     - name: Run Pyflakes
       run: pyflakes src/* > post_traces/pyflakes_traces.txt
 
+    - name: Push post_traces folder
+      run: |
+        git add post_traces
+        git diff --cached --exit-code || git commit -m "Post Traces"
+        git push origin main
+
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
         pytest test/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=./main --cov-report=xml --cov-report=html
+
     - name: Upload coverage report
       uses: actions/upload-artifact@v3
       with:
