--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,6 +31,8 @@ jobs:
 
     - name: Push post_traces folder
       run: |
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "GitHub Actions"
         git add post_traces
         git diff --cached --exit-code || git commit -m "Post Traces"
         git push origin main
