--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -30,6 +30,8 @@ jobs:
       run: pyflakes src/* > post_traces/pyflakes_traces.txt
 
     - name: Push post_traces folder
+      permissions:
+      contents: write
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
